styles/allgemein.less
// LAYOUT;

html,
body {
	margin: 0;
	padding: 0;
}

.dshNotiz {
  font-size: 90%;
}

#dshSeiteladenO {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 3px;
  z-index: 1000;
}

  #dshSeiteladenI {
    position: absolute;
    left: 0;
    height: 100%;
    transition: width 0.4s linear, opacity 0.3s ease-out;
    width: 0%;
    opacity: 0;
  }

*.dshNoTransition {
  transition: none !important;
}

// FARBEN;
.dshNotiz {
  color: @abstufung4;
}

#dshSeiteladenI {
  background-color: @logoSchriftfarbe;
}

